ISSUE: problem with banner background not showing

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -283,7 +283,7 @@ footer a {
   padding: 0;
   width: 100%;
   height: 50vh;
-  background: center / cover no-repeat url('src/assets/banner-background.jpg');
+  background: center / cover no-repeat url('./banner-background.jpg');
   -webkit-background-size: 100%;
   -moz-background-size: 100%;
   -o-background-size: 100%;
